syntax = "proto3";

package pools;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message RetireBaseDiskRequest {
    string BaseDiskId = 1;
    types.Disk SrcDisk = 2;
    string SrcDiskCheckpointId = 3;
}

message RetireBaseDiskTaskState {
    RetireBaseDiskRequest Request = 1;
    // Used to save GetCheckpointSize execution state.
    uint64 SrcDiskMilestoneBlockIndex = 2;
    // Used to save GetCheckpointSize execution state.
    uint64 SrcDiskMilestoneCheckpointSize = 3;
}
